--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,1 +1,7 @@
-<p>quote-detail works!</p>
+<p class="text-center text-danger">{{quote.author}}</p>
+<!-- <p>This quote was posted {{quote.quoteDate}}days ago</p> -->
+<h4>Vote for this quote</h4>
+<div><button class="vote btn btn-success" (click)='addvote(quote)'> Like </button> <span class="votes">  {{quote.upvote}}</span></div><br>
+<div><button class="vote btn btn-danger" (click)='reducevote(quote)'>Dislike </button> <span class="votes">   {{quote.downvote}}</span ></div><br>
+               
+<button (click)='quoteDelete(true)' class='btn btn-danger'>Delete Quote</button>
