--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,1 +1,25 @@
-<p>quote works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+
+            <app-form (addQuote)="addNewQuote($event)"></app-form>
+
+        </div>
+        <div class="col-md-6 ">
+            <h2 class="text-center">Here are a few sample quotes</h2>
+            <div *ngFor='let quote of quotes; let i = index' class="card ">
+                <div>
+                    <div class="text-center text-success">{{quote.name}}</div>
+                    <br>Posted on: {{quote.quoteDate}}<br>
+
+                    <button (click)='toggleAuthor(i)' class='btn btn-primary'>Author and Vote:</button>
+                    <div *ngIf='quote.showAuthor'>
+                        <app-quote-detail [quote]='quote' (isComplete)='deleteQuote($event,i)'></app-quote-detail>
+                    </div>
+                </div><br>
+
+
+            </div>
+        </div>
+    </div>
+</div>
