validated form, posted quote

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,33 @@
-<p>form works!</p>
+<div class="container-fluid">
+    <h2 class="text-center">Create a new Goal</h2>
+    <hr>
+    <form (ngSubmit)='submitQuote()' #goalForm='ngForm'>
+        <div class="form-group card">
+            <label for="name">Author</label>
+            <input type="text" required class="form-control" id="author" [(ngModel)]="newQuote.author" name="author" #author='ngModel' required>
+            <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
+                <p>Author is required</p>
+            </div>
+        </div><br>
+        <div class="form-group card">
+            <label for="name">Quote</label>
+            <textarea class="form-control" id="name" rows="4" [(ngModel)]="newQuote.name" name="name" #name="ngModel" required></textarea>
+            <div [hidden]="name.valid || name.pristine " class="alert alert-danger ">
+                <p>Quote is required</p>
+            </div>
+        </div><br>
+        <div class="form-group card">
+            <label for="person">Posted by</label>
+            <input type="text" required class="form-control" id="person" [(ngModel)]="newQuote.person" name="person" #person='ngModel' required>
+            <div [hidden]="person.valid || person.pristine " class="alert alert-danger ">
+                <p>Person is required</p>
+            </div>
+        </div><br>
+
+        <div class="form-group card ">
+            <label for="complete">Posted on</label>
+            <input type='date' id="complete" [(ngModel)]="newQuote.quoteDate" name="quoteDate" #quoteDate="ngModel" required>
+        </div>
+        <button type="submit" class="btn btn-success">Add Quote</button>
+    </form>
+</div>
